--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
         </article>
-        <!-- End of Cost Managment -->
+        <!-- End of Cost Management -->
     </aside>
 
     <footer class="footer">
